--- a/src/global.css
+++ b/src/global.css
@@ -18,8 +18,15 @@ body > div {
 }
 h1 {
   color:rgb(255, 56, 56);
+  text-align: center;
 }
 
 p{
   color: honeydew;
+  text-align: center;
+}
+
+button{
+  display: flex;
+  margin:auto
 }
